--- a/modulo_exemplos/app_expressjs/Views/create.pug
+++ b/modulo_exemplos/app_expressjs/Views/create.pug
@@ -9,11 +9,10 @@ head
         .modal-content
           // Modal Body
           .modal-body
-            //#editForm.form(role='form' method='GET' action='https://www.google.com/')
-            form(role='form' method='' action='')
+            form(role='form' method='POST' action="clients/create")
               div.form-group
                 label(for='name') Nome:
-                input#name.form-control(type='text', placeholder='nome' name='name')
+                input#name.form-control(type='text', placeholder='nome' name='nome')
               div.form-group
                 label(for='email') Email:
                 input#email.form-control(type='email', placeholder='nome@email.com' name='email')
