adiciona controle de login e rotas para produtos

--- a/modulo_exemplos/app_expressjs/Views/login.pug
+++ b/modulo_exemplos/app_expressjs/Views/login.pug
@@ -17,3 +17,5 @@ head
                 label(for='password') Senha:
                 input#email.form-control(type='password', name='password')
               button.btn.btn-primary(type="submit", name="asdf") Login
+          if login === 0
+            p *Senha ou usuario inválidos
